# computer-vision

./: .gitignore  README.md  pyproject.toml
computer_vision_app/: README.md  app.py  requirements.txt
computer_vision_app/assets/: main.js
computer_vision_app/core/: __init__.py  gesture_recognition.py  image_utils.py  model_loader.py  webcam_recog.py
lenet5/: lenet5.ipynb  lenet5_mnist.pth
recog_by_webcam/: detect.py  gesture.py  requirements.txt
recog_by_webcam/own_pipeline/: collect_data.py  predict.py  train_model.py
recog_system/: classificacao.ipynb
